--- a/nav.css
+++ b/nav.css
@@ -127,7 +127,7 @@ li a:hover {
    =========================
 */
 
-@media only screen and (max-width: 557px) {
+@media only screen and (max-width: 560px) {
     #desktop {
         display: none;
     }
@@ -153,7 +153,7 @@ li a:hover {
    ============================================
 */
 
-@media only screen and (min-width: 481px) and (max-width: 850px) {
+@media only screen and (min-width: 560px) and (max-width: 850px) {
     #desktop {
         display: block;
     }
